syntax="proto3";

package contentrpc;

option go_package = "./contentrpc";

service Content {
        rpc AddArticle(AddArticleRequest) returns (AddArticleResponse);
}

message AddArticleRequest {
        string title = 1;
        string author = 2;
        string content = 3;
}

message AddArticleResponse {
        int64 id = 1;
}
